fix nav icon animation on mobile

--- a/src/components/Nav/nav.module.scss
+++ b/src/components/Nav/nav.module.scss
@@ -101,7 +101,7 @@ $dot-size: 5px;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    transition: all $transition, background-color 0s, box-shadow 0s;
+    transition: all $transition, background-color 0s, box-shadow 0s, left 0s;
   }
 
   &:after {
@@ -113,7 +113,7 @@ $dot-size: 5px;
   }
 
   &::before {
-    transition-delay: $t-duration / 4, 0s;
+    transition-delay: $t-duration / 4, 0s, 0s, 0s;
   }
 
   .nav_button_close & {
